<resources>
    <string name="app_name">Airport</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_register">Register</string>
    <string name="title_activity_adminn">AdminnActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_airlines">Airlines</string>
    <string name="menu_airports">Airports</string>
    <string name="menu_users">Users</string>
    <string name="ticketpro">TicketPro</string>
    <string name="airline">Airline</string>
    <string name="add_airline">Add Airline</string>
    <string name="airline_name"> Name:</string>
    <string name="submit">Submit</string>
    <string name="new_airline_name">New airline name</string>
    <string name="airport">Airport</string>
    <string name="location">Location:</string>
    <string name="new_airport_name">New airport name</string>
    <string name="new_airport_country_name">New airport country name</string>
    <string name="new_airport_city_name">New airport city name</string>
    <string name="airplanes">Airplanes</string>
    <string name="flights">Flights</string>
    <string name="timetable">TimeTable</string>
    <string name="tickets">Tickets</string>
    <string name="number_of_seats">Number of seats:</string>
    <string name="airline_name_airplane">Airline:</string>
    <string name="airplane">Airplane</string>
    <string name="airplane_type">Airplane type:</string>
    <string name="new_airplane_type">New airplane type</string>
    <string name="new_number_of_seats">New number of seats</string>
    <string name="email">Email:</string>
    <string name="address">Address:</string>
    <string name="create_at">Create At:</string>
    <string name="phone">Phone:</string>
    <string name="user">User</string>
    <string name="new_user_name">New user name</string>
    <string name="new_user_email">New user email</string>
    <string name="new_user_phone">New user phone</string>
    <string name="new_user_adress">New user adress</string>
    <string name="flight_time">Flight time:</string>
    <string name="timetable_ras">Timetable:</string>
    <string name="new_flight_time">New flight time</string>
    <string name="new_monday_timetable">New monday timetable</string>
    <string name="new_tuesday_timetable">New tuesday timetable</string>
    <string name="new_wednesday_timetable">New wednesday timetable</string>
    <string name="new_thursday_timetable">New thursday timetable</string>
    <string name="new_friday_timetable">New friday timetable</string>
    <string name="new_saturday_timetable">New saturday timetable</string>
    <string name="new_sunday_timetable">New sunday timetable</string>
    <string name="departure_date">Departure date:</string>
    <string name="destination_date">Destination date:</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="price">Price:</string>
    <string name="flight">Flight</string>
    <string name="new_flight">New flight</string>
    <string name="departure_date_edit">Departure date</string>
    <string name="destination_date_edit">Destination date</string>
    <string name="flight_time_edit">Flight time</string>
    <string name="price_edit">Price</string>
    <string name="select_airline">Select airline</string>
    <string name="select_airplane_type">Select airplane type</string>
    <string name="select_airport_from">Select airport from</string>
    <string name="select_airport_to">Select airport to</string>
    <string name="select_timetable">Select timetable</string>
    <string name="user_textview">User:</string>
    <string name="seat">Seat:</string>
    <string name="order_date">Order date:</string>
    <string name="ticket">Ticket</string>
    <string name="new_ticket_flight">New ticket flight</string>
    <string name="new_user">New user</string>
    <string name="new_seat">New seat</string>
    <string name="new_ticket">New ticket</string>
</resources>
