<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_airlines"
            android:icon="@drawable/airline"
            android:title="@string/menu_airlines" />
        <item
            android:id="@+id/nav_airplanes"
            android:icon="@drawable/ic_launcher_airplane"
            android:title="@string/airplanes" />
        <item
            android:id="@+id/nav_airports"
            android:icon="@drawable/airport"
            android:title="@string/menu_airports" />
        <item
            android:id="@+id/nav_flights"
            android:icon="@drawable/ic_launcher_airplane"
            android:title="@string/flights" />
        <item
            android:id="@+id/nav_tickets"
            android:icon="@drawable/tickets"
            android:title="@string/tickets" />
        <item
            android:id="@+id/nav_timetable"
            android:icon="@drawable/timetable"
            android:title="@string/timetable" />
        <item
            android:id="@+id/nav_users"
            android:icon="@drawable/ic_user"
            android:title="@string/menu_users" />
    </group>

</menu>
