<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGrey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/timetableText"
                    style="@style/CoffeeTextViewPadding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/timetable"
                    android:textSize="20sp" />

                <android.support.v7.widget.CardView
                    android:id="@+id/cardView_timetable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="5dp"
                    android:background="@color/colorCoffee"
                    app:cardCornerRadius="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/CoffeeTextViewPadding"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/flight_time"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/timetable_flight_textview"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:paddingEnd="5dp"
                                android:paddingTop="5dp"
                                android:textColor="@color/colorBlack"
                                android:textSize="16sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/CoffeeTextViewPadding"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/timetable_ras"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/timetable_raspis"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:paddingBottom="15dp"
                                android:textColor="@color/colorBlack"
                                android:textSize="16sp" />

                        </LinearLayout>


                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <TextView
                    android:id="@+id/new_or_change_timetable"
                    style="@style/CoffeeTextViewPadding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:visibility="gone" />

                <android.support.v7.widget.CardView
                    android:id="@+id/layout_change_timatable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="5dp"
                    android:visibility="gone"
                    android:background="@color/colorCoffee"
                    app:cardCornerRadius="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingVertical="15dp">

                        <EditText
                            android:id="@+id/new_timetable_flight"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:hint="@string/new_flight_time"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/new_timetable_monday"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:hint="@string/new_monday_timetable"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/new_timetable_tuesday"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:hint="@string/new_tuesday_timetable"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/new_timetable_wednesday"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:hint="@string/new_wednesday_timetable"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/new_timetable_thursday"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:hint="@string/new_thursday_timetable"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/new_timetable_friday"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:hint="@string/new_friday_timetable"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/new_timetable_saturday"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:hint="@string/new_saturday_timetable"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/new_timetable_sunday"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:hint="@string/new_sunday_timetable"
                            android:textSize="18sp" />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            android:onClick="AddChangeTimeTableClick"
                            android:text="@string/submit" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </ScrollView>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>