<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGrey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/flightText"
                    style="@style/CoffeeTextViewPadding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/flight"
                    android:textSize="20sp" />

                <android.support.v7.widget.CardView
                    android:id="@+id/cardView_flight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="5dp"
                    android:background="@color/colorCoffee"
                    app:cardCornerRadius="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/CoffeeTextViewPadding"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/from"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/flight_airport_from_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="20dp"
                                android:paddingBottom="12dp"
                                android:textColor="@color/colorBlack"
                                android:textSize="14sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/CoffeeTextViewPadding"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/to"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/flight_airport_to_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="40dp"
                                android:paddingBottom="12dp"
                                android:textColor="@color/colorBlack"
                                android:textSize="14sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/CoffeeTextViewPadding"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/price"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/flight_price_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:textColor="@color/colorBlack"
                                android:textSize="14sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/CoffeeTextViewPadding"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/airplane_type"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/flight_airplane_type_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:textColor="@color/colorBlack"
                                android:textSize="14sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/CoffeeTextViewPadding"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/departure_date"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/flight_departure_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:textColor="@color/colorBlack"
                                android:textSize="14sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/CoffeeTextViewPadding"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/destination_date"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/flight_destination_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:textColor="@color/colorBlack"
                                android:textSize="14sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/CoffeeTextViewPadding"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/flight_time"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/flight_flight_time_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:textColor="@color/colorBlack"
                                android:textSize="14sp" />

                        </LinearLayout>


                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <TextView
                    android:id="@+id/new_flight"
                    style="@style/CoffeeTextViewPadding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/new_flight"
                    android:textSize="18sp"
                    android:visibility="gone" />

                <android.support.v7.widget.CardView
                    android:id="@+id/layout_add_flight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="5dp"
                    android:visibility="gone"
                    android:background="@color/colorCoffee"
                    app:cardCornerRadius="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingVertical="15dp">

                        <EditText
                            android:id="@+id/new_flight_departure_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:hint="@string/departure_date_edit"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/new_flight_destination_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:hint="@string/destination_date_edit"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/new_flight_price"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:hint="@string/price_edit"
                            android:textSize="16sp" />

                        <TextView
                            style="@style/TextViewHintStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/select_airplane_type" />

                        <Spinner
                            android:id="@+id/new_flight_airplane"
                            style="@style/SpinnerStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            style="@style/TextViewHintStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/select_airport_from" />

                        <Spinner
                            android:id="@+id/new_flight_airport_from"
                            style="@style/SpinnerStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            style="@style/TextViewHintStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/select_airport_to" />

                        <Spinner
                            android:id="@+id/new_flight_airport_to"
                            style="@style/SpinnerStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            style="@style/TextViewHintStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/select_timetable" />

                        <Spinner
                            android:id="@+id/new_flight_timetable"
                            style="@style/SpinnerStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            android:onClick="AddChangeFlightClick"
                            android:text="@string/submit" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </ScrollView>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>